--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -240,7 +240,7 @@
                         class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
             </div>
-            <div class="row" style="display: none">
+            <div class="row filter-study-reference-row" style="display: none">
                  <select data-placeholder="Choose a reference..."
                         id="filter-study-reference"
                         multiple>
@@ -260,7 +260,7 @@
                         class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
             </div>
-            <div class="row" style="display: none">
+            <div class="row filter-collectors-row" style="display: none">
                 <select data-placeholder="Choose a collector/assessor..."
                         id="filter-collectors"
                         multiple>
