--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -180,10 +180,10 @@
             <thead>
             <tr>
                 <th scope="col">Taxon</th>
-                <th scope="col">S</th>
-                <th scope="col">Veg</th>
-                <th scope="col">GSM</th>
-                <th scope="col">TOT</th>
+                <th scope="col">Stones</th>
+                <th scope="col">Vegetation</th>
+                <th scope="col">Gravel, sand, mud</th>
+                <th scope="col">Total</th>
             </tr>
             </thead>
             <tbody>
