Add 0 rating to SASS biotope rating (#752)
* Added column 0, and headers for each column

* Added changes to radio buttons as well as styling to allign buttons with headings

* Fixed flake8 errors

* Flake errors

--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -47,7 +47,13 @@
                             Biotopes Sampled
                         </th>
                         <th>
-                            Rating (1-5)
+                            <div class="container-fluid">
+                                <div class="row" style="text-align: center;">
+                                    {% autoescape off %}
+                                        {% get_html_for_radio_group_headings 6 %}
+                                    {% endautoescape %}
+                                </div>
+                            </div>
                         </th>
                     </tr>
                     </thead>
@@ -57,9 +63,13 @@
                             Stones In Current (SIC)
                         </td>
                         <td>
-                            {% autoescape off %}
-                                {% get_html_for_radio_group "sic-rating" sass_sheet.biotope_stones_in_current %}
-                            {% endautoescape %}
+                             <div class="container-fluid">
+                                <div class="row">
+                                    {% autoescape off %}
+                                        {% get_html_for_radio_group "sic-rating" sass_sheet.biotope_stones_in_current %}
+                                    {% endautoescape %}
+                                </div>
+                             </div>
                         </td>
 
                     </tr>
