--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -265,6 +265,7 @@ html, body, .map, .map-wrapper, #map-container {
     width: 265px;
     background-color: white;
     position: absolute;
+    display: inline-table;
     top: 0;
     color: black;
     padding: 5px 15px 0;
@@ -279,6 +280,7 @@ html, body, .map, .map-wrapper, #map-container {
     overflow-y: scroll;
     overflow-x: hidden;
     max-height: 90%;
+    height: fit-content;
 }
 
 .map-control-panel-box::-webkit-scrollbar
@@ -2240,4 +2242,40 @@ div:hover::-webkit-scrollbar {
 
 .popup-error {
     color: darkred;
+}
+
+#filter_collectors_chosen .search-choice {
+    line-height: 150%;
+    height: 100%;
+}
+
+#filter_collectors_chosen input {
+    height: 100%;
+}
+
+#filter_collectors_chosen .chosen-drop {
+    max-height: 20vh;
+}
+
+
+#filter_collectors_chosen .chosen-results {
+    max-height: 20vh;
+}
+
+
+#filter_study_reference_chosen .search-choice {
+    line-height: 150%;
+    height: 100%;
+}
+
+#filter_study_reference_chosen input {
+    height: 100%;
+}
+
+#filter_study_reference_chosen .chosen-drop {
+    max-height: 20vh;
+}
+
+#filter_study_reference_chosen .chosen-results{
+    max-height: 20vh;
 }
