--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -240,10 +240,11 @@
                         class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
             </div>
-            <div class="row" style="display: none">
-                <div class="col-lg-12 filter-content"
-                     id="filter-study-reference">
-                </div>
+            <div class="row filter-study-reference-row" style="display: none">
+                 <select data-placeholder="Choose a reference..."
+                        id="filter-study-reference"
+                        multiple>
+                </select>
                 <div class="button-filter-wrapper">
                     <button class="apply-filter">Apply Filter</button>
                     <button class="clear-filter">Clear Filter</button>
@@ -259,9 +260,11 @@
                         class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
             </div>
-            <div class="row" style="display: none">
-                <div class="col-lg-12 filter-content" id="filter-collectors">
-                </div>
+            <div class="row filter-collectors-row" style="display: none">
+                <select data-placeholder="Choose a collector/assessor..."
+                        id="filter-collectors"
+                        multiple>
+                </select>
                 <div class="button-filter-wrapper">
                     <button class="apply-filter">Apply Filter</button>
                     <button class="clear-filter">Clear Filter</button>
