--- a/bims/static/css/base.css
+++ b/bims/static/css/base.css
@@ -163,3 +163,21 @@ h6 {
   color: #526B43 !important;
   border-color: #526B43 !important;
 }
+
+.fbis-button {
+  background-color: #18A090;
+  border-radius: 3px;
+  margin: 0.25rem;
+  color: white;
+}
+
+.fbis-button:hover {
+  background-color: #6BC0B5;
+  color: white;
+}
+
+.fbis-button:active {
+  background-color: #17766B;
+  box-shadow:         inset 1px 1px 10px #333;
+  color: white;
+}
