--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -25,7 +25,7 @@
         {% csrf_token %}
         <div class="body-form container">
             <div class="header">
-                Add fish data for site {{ location_site_name }}
+                Add fish data for site {{ location_site_code }}
             </div>
             <div id="fish-map"></div>
             <div class="form-group row">
@@ -48,17 +48,20 @@
                 <label for="date"
                        class="col-sm-2 col-form-label col-form-label">Biotope</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control form-control-sm"
-                           id="biotope" placeholder="">
+                    <select class="form-control"
+                            name="biotope" id="biotope">
+                        {% for biotope in biotope_list %}
+                            <option value="{{ biotope.id }}"> {{ biotope.name }} </option>
+                        {% endfor %}
+                    </select>
                 </div>
             </div>
-
             <table class="table table-sm">
                 <thead>
                 <tr>
                     <th scope="col" width="300">Taxa</th>
                     <th scope="col">Observed</th>
-                    <th scope="col">Abundance</th>
+                    <th scope="col" width="200">Abundance</th>
                     <th scope="col">Sampling Method</th>
                 </tr>
                 </thead>
@@ -67,21 +70,35 @@
                     <tr>
                         <td scope="row"
                             class="taxon-name">
-                            {{ taxon.taxon_name }}
+                            {{ taxon.taxon_name }} <span
+                                class="badge badge-secondary">{{ taxon.rank }}</span>
                             <input type="hidden" value="{{ taxon.taxon_id }}">
                         </td>
-                        <td><input type="text"
-                                   name="{{ taxon.taxon_id }}-observed"
-                                   class="form-control"
-                                   placeholder=""></td>
-                        <td><input type="text"
+                        <td>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox"
+                                       value=""
+                                       name="{{ taxon.taxon_id }}-observed"
+                                       pattern="[0-9]">
+                                <label class="form-check-label">
+                                </label>
+                            </div>
+                        </td>
+                        <td>
+
+                            <input type="number"
                                    name="{{ taxon.taxon_id }}-abundance"
-                                   class="form-control"
-                                   placeholder=""></td>
-                        <td><input type="text"
-                                   name="{{ taxon.taxon_id }}-sampling-method"
-                                   class="form-control"
-                                   placeholder=""></td>
+                                   class="form-control taxon-abundance"
+                                   placeholder="">
+                        </td>
+                        <td>
+                            <select class="form-control"
+                                    name="{{ taxon.taxon_id }}-sampling-method">
+                                {% for sampling_method in sampling_method_list %}
+                                    <option value="{{ sampling_method.id }}"> {{ sampling_method.sampling_method }} </option>
+                                {% endfor %}
+                            </select>
+                        </td>
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -98,6 +115,6 @@
     <script src="{% static "js/libs/jquery-ui-1.12.1/jquery-ui.min.js" %}"></script>
     <script src="{% static "js/libs/openlayers-4.6.4/ol.js" %}"></script>
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
-    <script src="{% static "js/fish_form.js" %}"></script>
+    <script src="{% static "js/non_requirejs/fish_form.js" %}"></script>
 
 {% endblock %}
