Got origin highlighting working correctly

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -1002,17 +1002,18 @@
         </div>
         <div id="species-detail-summary-origin">
             <div class="row dd-sub-title">ORIGIN</div>
-            <div class="row dd-status-list origin-info-list">
+            <div class="row dd-status-list origin-info-list-detail">
                 <span class="dd-status-item"
-                      data-value="indigenous">Native</span>
+                      data-value="Native">Native</span>
                 <span class="dd-status-item"
-                      data-value="alien">Non-native</span>
-                <span class="dd-status-item" data-value="translocated">Translocated</span>
+                      data-value="Non-native">Non-native</span>
+                <span class="dd-status-item"
+                      data-value="Translocated">Translocated</span>
             </div>
         </div>
         <div id="species-detail-summary-endemism">
             <div class="row dd-sub-title">ENDEMISM</div>
-            <div class="row dd-status-list endemic-info-list">
+            <div class="row dd-status-list endemic-info-list-detail">
                 <span class="dd-status-item" data-value="widespread">Widespread</span>
                 <span class="dd-status-item" data-value="regional endemic">Regional endemic</span>
                 <span class="dd-status-item" data-value="micro-endemic">Micro-endemic</span>
@@ -1020,7 +1021,7 @@
         </div>
         <div id="species-detail-summary-conservation-status">
             <div class="row dd-sub-title">CONSERVATION STATUS</div>
-            <div class="row dd-status-list conservation-status-list">
+            <div class="row dd-status-list conservation-status-list-detail">
                 <span class="dd-status-item"
                       data-value="EX">Extinct (EX)</span>
                 <span class="dd-status-item" data-value="EW">Extinct in the wild (EW)</span>
