Added and styled open detail dashboard button

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -1028,9 +1028,11 @@
              </div>
         </div>
     </div>
-    <div class="open-detailed-button-container">
-            <button class="btn  open-detailed-view">Open detailed
-                dashboard
+    <div class="container-fluid">
+            <button class="btn fbis-button right-panel-button
+                           right-panel-last-button
+                           open-detailed-view">
+                Open detailed dashboard
             </button>
     </div>
 </script>
