Fixed inconsistency with detail dashboard button

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -1029,9 +1029,7 @@
         </div>
     </div>
     <div class="container-fluid">
-            <button class="btn fbis-button right-panel-button
-                           right-panel-last-button
-                           open-detailed-view">
+            <button id="open-detailed-view" class="btn fbis-button right-panel-button right-panel-last-button">
                 Open detailed dashboard
             </button>
     </div>
