--- a/sass/templates/sass_list_page.html
+++ b/sass/templates/sass_list_page.html
@@ -1,6 +1,8 @@
 {% extends 'main_base.html' %}
 {% load static from staticfiles %}
 {% load jsonify %}
+{% load proper_paginate %}
+{% load url_replace %}
 
 {% block subtitle %}
     SASS List
@@ -20,32 +22,28 @@
         <table class="table table-sm">
             <thead>
             <tr>
-                <th scope="col">Location Site</th>
+                <th scope="col" width="700">Location Site</th>
                 <th scope="col">Date Time</th>
-                <th scope="col">Time (min)</th>
-                <th scope="col">Notes</th>
-                <th scope="col">Other Biota</th>
+                <th scope="col">SASS Version</th>
                 <th scope="col">Actions</th>
             </tr>
             </thead>
             <tbody>
-            {% for sheet in sass_5_sheet %}
+            {% for sheet in site_visits %}
                 <tr>
                     <td scope="row"
                         class="sheet-row">
                         {{ sheet.location_site.name }}
                     </td>
                     <td class="sheet-row">
-                        {{ sheet.date }}
+                        {{ sheet.site_visit_date }}
                     </td>
                     <td class="sheet-row">
-                        {{ sheet.time_minutes }}
-                    </td>
-                    <td class="sheet-row">
-                        {{ sheet.notes }}
-                    </td>
-                    <td class="sheet-row">
-                        {{ sheet.other_biota }}
+                        {% if sheet.sass_version %}
+                            {{ sheet.sass_version }}
+                        {% else %}
+                            -
+                        {% endif %}
                     </td>
                     <td class="sheet-row">
                         <a href="/sass/update/{{ sheet.id }}" class="btn btn-sm btn-info">Update</a>
@@ -55,54 +53,7 @@
             </tbody>
         </table>
 
-            <nav aria-label="Page navigation example">
-                <ul class="pagination">
-                    {% if page_obj.has_previous %}
-                        <li class="page-item">
-                            <a class="page-link"
-                               href="?page={{ page_obj.previous_page_number }}"
-                               aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                        </li>
-                    {% else %}
-                        <li class="page-item disabled">
-                            <a class="page-link" href="#"
-                               aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                        </li>
-                    {% endif %}
-                    {% for i in paginator.page_range %}
-                        {% if page_obj.number == i %}
-                            <li class="page-item active">
-                                <a class="page-link" href="#">{{ i }} <span
-                                        class="sr-only">(current)</span></a>
-                            </li>
-                        {% else %}
-                            <li class="page-item">
-                                <a class="page-link"
-                                   href="?page={{ i }}">{{ i }}</a></li>
-                        {% endif %}
-                    {% endfor %}
-
-                    {% if page_obj.has_next %}
-                        <li class="page-item">
-                            <a class="page-link"
-                               href="?page={{ page_obj.next_page_number }}">&raquo;</a>
-                        </li>
-                    {% else %}
-                        <li class="page-item disabled">
-                            <a class="page-link" href="#" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
-                                <span class="sr-only">Next</span>
-                            </a>
-                        </li>
-                    {% endif %}
-                </ul>
-            </nav>
+        {% include 'paginator_template.html' %}
     </div>
 {% endblock %}
 
