--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -9,21 +9,9 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static "css/form_page.css" %}" rel="stylesheet">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script type="text/javascript">
-        var isUpdate = {% if sass_sheet %}true{% else %}false{% endif %};
-        var sicRating = {% if sass_sheet %}"{{ sass_sheet.biotope_stones_in_current }}"{% else %}""{% endif %};
-        var soocRating = {% if sass_sheet %}"{{ sass_sheet.biotope_stones_out_of_current }}"{% else %}""{% endif %};
-        var bedrockRating = {% if sass_sheet %}"{{ sass_sheet.biotope_bedrock }}"{% else %}""{% endif %};
-
-        var aquaticVegRating = {% if sass_sheet %}"{{ sass_sheet.biotope_aquatic_vegetation }}"{% else %}""{% endif %};
-        var micRating = {% if sass_sheet %}"{{ sass_sheet.biotope_margin_veg_in_current }}"{% else %}""{% endif %};
-        var moocRating = {% if sass_sheet %}"{{ sass_sheet.biotope_margin_veg_out_of_current }}"{% else %}""{% endif %};
-
-        var gravelRating = {% if sass_sheet %}"{{ sass_sheet.biotope_gravel }}"{% else %}""{% endif %};
-        var sandRating = {% if sass_sheet %}"{{ sass_sheet.biotope_sand }}"{% else %}""{% endif %};
-        var mudRating = {% if sass_sheet %}"{{ sass_sheet.biotope_mud }}"{% else %}""{% endif %};
-
-        var handPickingRating = {% if sass_sheet %}"{{ sass_sheet.biotope_hand_picking }}"{% else %}""{% endif %};
+        var isUpdate = {% if is_update %}true{% else %}false{% endif %};
     </script>
 
 {% endblock %}
@@ -33,7 +21,7 @@
     <form action="{{ request.path }}" method="post" id="sass-form">
     {% csrf_token %}
     <div class="body-form container">
-        {% if sass_sheet %}
+        {% if is_update %}
             <h2>Update SASS record</h2>
         {% else %}
             <h2>Add SASS record</h2>
@@ -58,130 +46,38 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr class="no-line">
-                        <td class="sampled-name">
-                            Stones In Current (SIC)
-                        </td>
-                        <td>
-                             <div class="container-fluid">
-                                <div class="row">
-                                    {% autoescape off %}
-                                        {% get_html_for_radio_group "sic-rating" sass_sheet.biotope_stones_in_current %}
-                                    {% endautoescape %}
-                                </div>
-                             </div>
-                        </td>
-
-                    </tr>
-                    <tr class="no-line">
-                        <td class="sampled-name">
-                            Stones Out Of Current (SOOC)
-                        </td>
-                        <td>
-                            {% autoescape off %}
-                                {% get_html_for_radio_group "sooc-rating" sass_sheet.biotope_stones_out_of_current %}
-                            {% endautoescape %}
-                        </td>
-
-                    </tr>
-                    <tr class="no-line">
-                        <td class="sampled-name">
-                            Bedrock
-                        </td>
-                        <td>
-                            {% autoescape off %}
-                                {% get_html_for_radio_group "bedrock-rating" sass_sheet.biotope_bedrock  %}
-                            {% endautoescape %}
-                        </td>
-
-                    </tr>
-                    <tr>
-                        <td class="sampled-name">
-                            Aquatic Veg
-                        </td>
-                        <td>
-                           {% autoescape off %}
-                                {% get_html_for_radio_group "aquatic-veg-rating" sass_sheet.biotope_aquatic_vegetation %}
-                            {% endautoescape %}
-                        </td>
-
-                    </tr>
-                    <tr class="no-line">
-                        <td class="sampled-name">
-                            MargVeg In Current
-                        </td>
-                        <td>
-                            {% autoescape off %}
-                                {% get_html_for_radio_group "mic-rating" sass_sheet.biotope_margin_veg_in_current %}
-                            {% endautoescape %}
-                        </td>
-
-                    </tr>
-                    <tr class="no-line">
-                        <td class="sampled-name">
-                            MargVeg Out Of Current
-                        </td>
-                        <td>
-                            {% autoescape off %}
-                                {% get_html_for_radio_group "mooc-rating" sass_sheet.biotope_margin_veg_out_of_current %}
-                            {% endautoescape %}
-                        </td>
-
-                    </tr>
-                    <tr>
-                        <td class="sampled-name">
-                            Gravel
-                        </td>
-                        <td>
-                            {% autoescape off %}
-                                {% get_html_for_radio_group "gravel-rating" sass_sheet.biotope_gravel %}
-                            {% endautoescape %}
-                        </td>
-
-                    </tr>
-                    <tr class="no-line">
-                        <td class="sampled-name">
-                            Sand
-                        </td>
-                        <td>
-                            {% autoescape off %}
-                                {% get_html_for_radio_group "sand-rating" sass_sheet.biotope_sand %}
-                            {% endautoescape %}
-                        </td>
-
-                    </tr>
-                    <tr class="no-line">
-                        <td class="sampled-name">
-                            Mud
-                        </td>
-                        <td>
-                            {% autoescape off %}
-                                {% get_html_for_radio_group "mud-rating" sass_sheet.biotope_mud %}
-                            {% endautoescape %}
-                        </td>
-
-                    </tr>
-                    <tr>
-                        <td class="sampled-name">
-                            Hand picking/Visual observation
-                        </td>
-                        <td>
-                            {% autoescape off %}
-                                {% get_html_for_radio_group "hand-picking-rating" sass_sheet.biotope_hand_picking %}
-                            {% endautoescape %}
-                        </td>
-
-                    </tr>
+                        {% for biotope_form in biotope_form_list %}
+                            <tr>
+                                <td class="sampled-name">
+                                    {{ biotope_form.name }}
+                                </td>
+                                <td>
+                                    <div class="container-fluid">
+                                        <div class="row">
+                                            {% autoescape off %}
+                                                {% get_html_for_radio_group biotope_form.name biotope_form.rate %}
+                                            {% endautoescape %}
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
             <div class="col-lg-3">
                 <div class="form-group">
-                    <label for="time_min" class="input-label">Time (min):</label>
-                    <input type="number" class="form-control" id="time_min" name="time-min" {% if sass_sheet.time_minutes %} value="{{ sass_sheet.time_minutes }}" {% endif %} >
+                    <label for="date" class="input-label">Date :</label>
+                    <input type="date" class="form-control" id="date" name="date" {% if date %} value="{{ date|date:'m/d/Y' }}" {% endif %} >
                 </div>
-                <div class="fbis-sass-logo">
-                    <img src="{% static 'img/fbis_sass_logo.png' %}" width="100%">
+                <div class="form-group">
+                    <label for="time" class="input-label">Time :</label>
+                    <input type="text" class="form-control" id="time" name="time" {% if time %} value="{{ time }}" {% endif %} >
+                </div>
+                <div class="form-group">
+                    <label for="assessor" class="input-label">Assessor :</label>
+                    <input type="text" class="form-control" id="assessor" {% if assessor %} value="{{ assessor.first_name }} {{ assessor.last_name }}" {% endif %} >
+                    <input type="hidden" name="assessor" {% if assessor %} value="{{ assessor.id }}" {% endif %}>
                 </div>
             </div>
         </div>
@@ -206,13 +102,13 @@
                             <input type="hidden" value="{{ taxon.id }}">
                         </td>
                         <td><input type="text" name="{{ taxon.id }}-S" class="form-control"
-                                   {% if taxon.s_value %} value="{{ taxon.s_value }}" {% endif %} placeholder="S"></td>
+                                   {% if taxon.s_value %} value="{{ taxon.s_value }}" {% endif %} placeholder=""></td>
                         <td><input type="text" name="{{ taxon.id }}-Veg" class="form-control"
-                                   {% if taxon.veg_value %} value="{{ taxon.veg_value }}" {% endif %} placeholder="Veg"></td>
+                                   {% if taxon.veg_value %} value="{{ taxon.veg_value }}" {% endif %} placeholder=""></td>
                         <td><input type="text" name="{{ taxon.id }}-GSM" class="form-control"
-                                   {% if taxon.gsm_value %} value="{{ taxon.gsm_value }}" {% endif %} placeholder="GSM"></td>
+                                   {% if taxon.gsm_value %} value="{{ taxon.gsm_value }}" {% endif %} placeholder=""></td>
                         <td><input type="text" name="{{ taxon.id }}-TOT" class="form-control"
-                                   {% if taxon.tot_value %} value="{{ taxon.tot_value }}" {% endif %} placeholder="TOT"></td>
+                                   {% if taxon.tot_value %} value="{{ taxon.tot_value }}" {% endif %} placeholder=""></td>
                     </tr>
                 {% else %}
                     <tr>
@@ -280,6 +176,8 @@
     <!-- Plugin JavaScript -->
     <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="{% static "js/sass_5_record.js" %}"></script>
 
 {% endblock %}
