--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -9,6 +9,7 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static "css/form_page.css" %}" rel="stylesheet">
+    <link href="{% static "css/jquery.timepicker.min.css" %}" rel="stylesheet">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script type="text/javascript">
         var isUpdate = {% if is_update %}true{% else %}false{% endif %};
@@ -72,7 +73,7 @@
                 </div>
                 <div class="form-group">
                     <label for="time" class="input-label">Time :</label>
-                    <input type="text" class="form-control" id="time" name="time" {% if time %} value="{{ time }}" {% endif %} >
+                    <input type="text" class="form-control" id="time" name="time" {% if time %} value="{{ time|time:"H:i" }}" {% endif %} >
                 </div>
                 <div class="form-group">
                     <label for="assessor" class="input-label">Assessor :</label>
@@ -178,6 +179,7 @@
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="{% static "js/libs/jquery.timepicker.min.js" %}"></script>
     <script src="{% static "js/sass_5_record.js" %}"></script>
 
 {% endblock %}
