--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -102,14 +102,14 @@
                             {{ taxon.name }}
                             <input type="hidden" value="{{ taxon.id }}">
                         </td>
-                        <td><input type="text" name="{{ taxon.id }}-S" class="form-control"
-                                   {% if taxon.s_value %} value="{{ taxon.s_value }}" {% endif %} placeholder=""></td>
-                        <td><input type="text" name="{{ taxon.id }}-Veg" class="form-control"
-                                   {% if taxon.veg_value %} value="{{ taxon.veg_value }}" {% endif %} placeholder=""></td>
-                        <td><input type="text" name="{{ taxon.id }}-GSM" class="form-control"
-                                   {% if taxon.gsm_value %} value="{{ taxon.gsm_value }}" {% endif %} placeholder=""></td>
-                        <td><input type="text" name="{{ taxon.id }}-TOT" class="form-control"
-                                   {% if taxon.tot_value %} value="{{ taxon.tot_value }}" {% endif %} placeholder=""></td>
+                        <td><input type="text" name="{{ taxon.id }}-S" class="rating-input form-control"
+                                   {% if taxon.s_value %} value="{{ taxon.s_value }}" {% endif %} placeholder="" maxlength="1"></td>
+                        <td><input type="text" name="{{ taxon.id }}-Veg" class="rating-input form-control"
+                                   {% if taxon.veg_value %} value="{{ taxon.veg_value }}" {% endif %} placeholder="" maxlength="1"></td>
+                        <td><input type="text" name="{{ taxon.id }}-GSM" class="rating-input form-control"
+                                   {% if taxon.gsm_value %} value="{{ taxon.gsm_value }}" {% endif %} placeholder="" maxlength="1"></td>
+                        <td><input type="text" name="{{ taxon.id }}-TOT" class="rating-input form-control"
+                                   {% if taxon.tot_value %} value="{{ taxon.tot_value }}" {% endif %} placeholder="" maxlength="1"></td>
                     </tr>
                 {% else %}
                     <tr>
@@ -180,6 +180,6 @@
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="{% static "js/libs/jquery.timepicker.min.js" %}"></script>
-    <script src="{% static "js/sass_5_record.js" %}"></script>
+    <script src="{% static "js/sass_form.js" %}"></script>
 
 {% endblock %}
