Add sass code information

--- a/sass/static/css/form_page.css
+++ b/sass/static/css/form_page.css
@@ -75,3 +75,9 @@ td.sampled-name {
     padding: 0;
     text-align: center;
 }
+
+.site-code {
+    margin-top: -20px;
+    font-size: 14pt;
+    font-weight: bold;
+}
