--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -27,6 +27,9 @@
         {% else %}
             <h2>Add SASS record</h2>
         {% endif %}
+        <div class="site-code pull-right">
+            Site code/name : {{ site_code }}
+        </div>
         <div class="row">
             <div class="col-lg-9">
                 <table class="table table-sm">
