--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -56,7 +56,8 @@
             conservationStatusData = {{ conservation_status_data | safe }};
         {% endif %}
         const locationSiteGeoserverLayer = '{{ bims_preferences.geoserver_location_site_layer }}';
-        const defaultWMSSiteParameters = '("bims_biologicalcollectionrecord"."taxonomy_id" IS NOT NULL AND "bims_biologicalcollectionrecord"."validated" = True)';
+        const defaultWMSSiteParameters = 'default_biotest';
+        const emptyWMSSiteParameter = 'empty_biotest';
     </script>
     {% block extra_head %}
 
