Update search and clustering (#776)
* Initial search version 2 (#720)

* Add new search api

* User boundary filter

* Add endemic filter

* Return sites data

* Run the search process in worker

* Add site results pagination api

* Update frontend api

* show more example

* Add total records under search result title

* Update layout

* Update download csv with new search api (#735)

* Integrate geoserver with django bims [In Progress] (#737)

* Show sites from geoserver

* Clustering with point stacker

* Fix query raw

* Fix administrative layer

* Fix layer selector

* Fix layer selector

* Integrate geoserver with django bims (#756)

* Show sites from geoserver

* Clustering with point stacker

* Fix query raw

* Fix administrative layer

* Fix layer selector

* Fix layer selector

* Clickable site point

* Fix site detail single dashboard (#757)

* Fix reset search

* Fix site detail single dashboard

* Flake8

* Add extent

* Show location site in detail dashboard

* Update taxon detail dashboard (#762)

Update taxon detail dashboard

* Add default wms site parameter

* Fix download csv

* Fix multiple query search

* Create sql view

* Fix autocomplete

* Search by vernacular names

* Remove elasticsearch

* Update travis configuration

* Add command to add default and empty site view

* Fix flake

--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -18,6 +18,10 @@
     <link href="{% static "js/libs/chosen/chosen.min.css" %}" rel="stylesheet">
 
     <script type="text/javascript">
+        String.prototype.replaceAll = function(search, replacement) {
+            let target = this;
+            return target.split(search).join(replacement);
+        };
         const max_year_filter = '{{ date_filter.max }}';
         const min_year_filter = '{{ date_filter.min }}';
         const bingMapKey = '{{ bing_map_key }}';
@@ -44,12 +48,16 @@
         const isHealthyrivers = {% if is_healthyrivers %} true {% else %} false {% endif %}
         const ogcServerDefaultLocation = "{{ OGC_SERVER.default.PUBLIC_LOCATION }}";
         const userCanValidate = "{% if can_validate %} true {% else %} false {% endif %}";
+        const geoserverPublicUrl = '{{ geoserver_public_location }}';
         var filterParameters = {};
         var conservationStatusData = [];
         const is_sass_enabled = {% if is_sass_enabled %}true{% else %}false{% endif %};
         {% if use_conservation_status %}
             conservationStatusData = {{ conservation_status_data | safe }};
         {% endif %}
+        const locationSiteGeoserverLayer = '{{ bims_preferences.geoserver_location_site_layer }}';
+        const defaultWMSSiteParameters = '{{ bims_preferences.default_location_site_cluster }}';
+        const emptyWMSSiteParameter = '{{ bims_preferences.empty_location_site_cluster }}';
     </script>
     {% block extra_head %}
 
