--- a/bims/static/css/base.css
+++ b/bims/static/css/base.css
@@ -164,6 +164,16 @@ h6 {
   border-color: #526B43 !important;
 }
 
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                   supported by Chrome and Opera */
+}
+
 .fbis-button {
     background-color: #18A090;
     border-radius: 3px;
