Refactored code into multiple files

--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -133,6 +133,8 @@
     {% endblock %}
 
     {% include 'map_page/map-templates.html' %}
+    {% include 'map_page/search-panel-templates.html' %}
+    {% include 'map_page/side-panel-templates.html' %}
     {% include 'map_page/dashboard-templates.html' %}
 {% endblock %}
 
