--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -246,3 +246,16 @@
         </div>
     </div>
 </script>
+
+<script type="text/template" id="third-party-template">
+    <a href="https://gbif.org/species/<%= taxon_gbif_id %>/" target="_blank">
+        <div class="third-party-info">
+            From gbif.org
+        </div>
+    </a>
+    <div class="third-party-fetching-info">
+        Fetching...
+    </div>
+    <div class="content row third-party-wrapper">
+    </div>
+</script>
