--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -83,6 +83,11 @@
                     <input type="text" class="form-control" id="assessor" {% if assessor %} value="{{ assessor.first_name }} {{ assessor.last_name }}" {% endif %} >
                     <input type="hidden" id="assessor_id" name="assessor" {% if assessor %} value="{{ assessor.id }}" {% endif %}>
                 </div>
+                <div class="form-group">
+                    <label for="data-source" class="input-label">Source :</label>
+                    <input type="text" class="form-control" id="data-source" name="data-source-name" {% if data_source %} value="{{ data_source.name }}" {% endif %}>
+                    <input type="hidden" id="data-source-id" name="data-source-id" {% if data_source %} value="{{ data_source.id }}" {% endif %}>
+                </div>
             </div>
         </div>
 
