--- a/sass/static/css/form_page.css
+++ b/sass/static/css/form_page.css
@@ -81,3 +81,16 @@ td.sampled-name {
     font-size: 14pt;
     font-weight: bold;
 }
+
+.sass-score {
+    float: right;
+    padding-right: 10px;
+}
+
+.sass-score-row {
+    background-color: rgba(29, 188, 13, 0.08);
+}
+
+.sass-score-row .taxon-name {
+    font-size: 13pt;
+}
