--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -109,13 +109,13 @@
                             class="taxon-name {% if taxon.should_bold %} bold {% endif %}">
                             {{ taxon.name }}
                         </td>
-                        <td><input type="text" name="taxon_list-{{ taxon.id }}-S" class="rating-input form-control"
+                        <td><input data-biotope="stones" data-id="{{ taxon.id }}" type="text" name="taxon_list-{{ taxon.id }}-S" class="rating-input form-control"
                                    {% if taxon.s_value %} value="{{ taxon.s_value }}" {% endif %} placeholder="" maxlength="1"></td>
-                        <td><input type="text" name="taxon_list-{{ taxon.id }}-Veg" class="rating-input form-control"
+                        <td><input data-biotope="vegetation" data-id="{{ taxon.id }}" type="text" name="taxon_list-{{ taxon.id }}-Veg" class="rating-input form-control"
                                    {% if taxon.veg_value %} value="{{ taxon.veg_value }}" {% endif %} placeholder="" maxlength="1"></td>
-                        <td><input type="text" name="taxon_list-{{ taxon.id }}-GSM" class="rating-input form-control"
+                        <td><input data-biotope="gsm" data-id="{{ taxon.id }}" type="text" name="taxon_list-{{ taxon.id }}-GSM" class="rating-input form-control"
                                    {% if taxon.gsm_value %} value="{{ taxon.gsm_value }}" {% endif %} placeholder="" maxlength="1"></td>
-                        <td><input type="text" name="taxon_list-{{ taxon.id }}-TOT" class="rating-input total-rating form-control"
+                        <td><input data-biotope="total" data-id="{{ taxon.id }}" type="text" name="taxon_list-{{ taxon.id }}-TOT" class="rating-input total-rating form-control"
                                    {% if taxon.tot_value %} value="{{ taxon.tot_value }}" {% endif %} placeholder="" maxlength="1"></td>
                     </tr>
                 {% else %}
@@ -126,6 +126,60 @@
                     </tr>
                 {% endif %}
             {% endfor %}
+            <tr class="sass-score-row">
+                <td scope="row"
+                    class="taxon-name bold ">
+                    SASS Score
+                </td>
+                <td>
+                    <div id="sass-score-stones" class="sass-score">
+                        0
+                    </div>
+                </td>
+                <td>
+                    <div id="sass-score-vegetation" class="sass-score">
+                        0
+                    </div>
+                </td>
+                <td>
+                    <div id="sass-score-gsm" class="sass-score">
+                        0
+                    </div>
+                </td>
+                <td>
+                    <div id="sass-score-total" class="sass-score">
+                        0
+                    </div>
+                </td>
+            </tr>
+
+            <tr class="sass-score-row">
+                <td scope="row"
+                    class="taxon-name bold ">
+                    Number of Taxa
+                </td>
+                <td>
+                    <div id="number-taxa-stones" class="sass-score">
+                        0
+                    </div>
+                </td>
+                <td>
+                    <div id="number-taxa-vegetation" class="sass-score">
+                        0
+                    </div>
+                </td>
+                <td>
+                    <div id="number-taxa-gsm" class="sass-score">
+                        0
+                    </div>
+                </td>
+                <td>
+                    <div id="number-taxa-total" class="sass-score">
+                        0
+                    </div>
+                </td>
+            </tr>
+
             <tr>
                 <th colspan="5" scope="row">
                     Other biota:
