--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -180,6 +180,33 @@
                 </td>
             </tr>
 
+             <tr class="sass-score-row">
+                <td scope="row"
+                    class="taxon-name bold ">
+                    ASPT
+                </td>
+                <td>
+                    <div id="aspt-stones" class="sass-score">
+                        0
+                    </div>
+                </td>
+                <td>
+                    <div id="aspt-vegetation" class="sass-score">
+                        0
+                    </div>
+                </td>
+                <td>
+                    <div id="aspt-gsm" class="sass-score">
+                        0
+                    </div>
+                </td>
+                <td>
+                    <div id="aspt-total" class="sass-score">
+                        0
+                    </div>
+                </td>
+            </tr>
+
             <tr>
                 <th colspan="5" scope="row">
                     Other biota:
