--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -24,12 +24,26 @@
 <script type='text/html' id='site-details-template'>
     <div class="container-fluid" id="site-details-wrapper">
         <div class="row">
-            <div class="col-8">FBIS Site Code</div><div class="col-4"><%= fbis_site_code %></div>
-            <div class="col-8">Site Coordinates</div><div class="col-4"><%= site_coordinates %></div>
-            <div class="col-8">Site Description</div><div class="col-4"><%= site_description %></div>
-            <div class="col-8">Geomorphological Zone</div><div class="col-4"><%= geomorphological_zone %></div>
-            <div class="col-8">River</div><div class="col-4"><%= river %></div>
-            </div>
+            <div class="col-8 caption-column">FBIS Site Code</div>
+            <div class="col-4 value-column"><%= fbis_site_code %></div>
+        </div>
+        <div class="row">
+            <div class="col-8 caption-column">Site Coordinates</div>
+            <div class="col-4 value-column"><%= site_coordinates %></div>
+        </div>
+        <div class="row">
+            <div class="col-8 caption-column">Site Description</div>
+            <div class="col-4 value-column"><%= site_description %></div>
+        </div>
+        <div class="row">
+            <div class="col-8 caption-column">Geomorphological Zone</div>
+            <div class="col-4 value-column"><%= geomorphological_zone %></div>
+        </div>
+        <div class="row">
+            <div class="col-8 caption-column">River</div>
+            <div class="col-4 value-column"><%= river %></div>
         </div>
     </div>
 </script>
+
+
