--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -21,3 +21,16 @@
     </div>
 </script>
 
+<script type='text/html' id='site-details-template'>
+    <div class="container-fluid" id="site-details-wrapper">
+        <div class="row">
+            <div class="col-8 caption-column">Mean annual temperature</div>
+            <div class="col-4 value-column"><%= mean_annual_temperature %></div>
+        </div>
+        <div class="row">
+            <div class="col-8 caption-column">Mean annual rainfall</div>
+            <div class="col-4 value-column"><%= mean_annual_rainfall %></div>
+        </div>
+    </div>
+</script>
+
