--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -21,8 +21,8 @@
     </div>
 </script>
 
-<script type='text/html' id='site-details-template'>
-    <div class="container-fluid" id="site-details-wrapper">
+<script type='text/html' id='climate-data-template'>
+    <div class="container-fluid" id="climate-data-wrapper">
         <div class="row">
             <div class="col-8 caption-column">Mean annual temperature</div>
             <div class="col-4 value-column"><%= mean_annual_temperature %></div>
