--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -16,6 +16,8 @@
         const yearLabels = {{ year_labels }};
         const taxaNumbers = {{ taxa_numbers }};
         const asptList = {{ aspt_list }};
+        const sassTaxonData = {{ sass_taxon_data | safe }};
+        const biotopeData = {{ biotope_data | safe }};
     </script>
 
 {% endblock %}
@@ -25,10 +27,54 @@
 
         <h2 class="dashboard-title">SASS Dashboard</h2>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-md-6">
                 <div class="map-container" id="map"></div>
+                <div class="vertical-space"></div>
+                <div class="table-container">
+                    <table class="table table-striped">
+                        <tbody>
+                        <tr>
+                            <th scope="row">FBIS Site Code</th>
+                            <td>G1EERS-JONKE</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Site coordinates</th>
+                            <td>12,31</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Site description</th>
+                            <td>Upstream</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="vertical-space"></div>
+                <div class="table-container">
+                    <div class="table-title">
+                        SASS Taxa per biotope
+                    </div>
+                    <table class="table table-condensed table-striped sass-taxon-per-biotope-table">
+                        <thead>
+                        <tr>
+                            <th>
+                                TAXA
+                            </th>
+                            <th></th>
+                            <th>
+                                Weight
+                            </th>
+                            <th>S</th>
+                            <th>V</th>
+                            <th>G</th>
+                            <th>Site</th>
+                        </tr>
+                        </thead>
+                        <tbody id="sass-taxon-per-biotope">
+                        </tbody>
+                    </table>
+                </div>
             </div>
-            <div class="col-lg-6 mp">
+            <div class="col-md-6 mp">
                 <div class="chart-container">
                     <canvas id="sass-score-chart"></canvas>
                     <canvas id="taxa-numbers-chart"></canvas>
