Update sass taxa per biotope

--- a/sass/static/css/sass_dashboard.css
+++ b/sass/static/css/sass_dashboard.css
@@ -55,3 +55,8 @@ body {
 .sass-taxon-per-biotope-table td, .sass-taxon-per-biotope-table th {
     padding: .50rem !important;
 }
+
+.total-table {
+    font-weight: bolder;
+    background-color: rgba(88, 159, 72, 0.1) !important;
+}
