--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -36,15 +36,15 @@
                         <tbody>
                         <tr>
                             <th scope="row">FBIS Site Code</th>
-                            <td>G1EERS-JONKE</td>
+                            <td>{{ site_code }}</td>
                         </tr>
                         <tr>
                             <th scope="row">Site coordinates</th>
-                            <td>12,31</td>
+                            <td>{{ coord.0 }}, {{ coord.1 }}</td>
                         </tr>
                         <tr>
                             <th scope="row">Site description</th>
-                            <td>Upstream</td>
+                            <td>{{ site_description }}</td>
                         </tr>
                         </tbody>
                     </table>
@@ -53,6 +53,9 @@
                 <div class="table-container">
                     <div class="table-title">
                         SASS Taxa per biotope
+                        <span class="pull-right">
+                            {{ sass_taxon_table_data.site_visit_date }}
+                        </span>
                     </div>
                     <table class="table table-condensed table-striped sass-taxon-per-biotope-table">
                         <thead>
